2005-04-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-properties-view.c: (on_got_metadata_event),
	(on_timeout_event), (totem_properties_view_finalize),
	(totem_properties_view_set_location):
	  Hack to improve metadata loading (#170355).

2005-04-13  Bastien Nocera  <hadess@hadess.net>

	* src/metadata-test.c:
	* src/totem-session.c: (totem_session_restore):
	* src/totem-video-thumbnailer.c:
	* src/totem.c: (on_open_location1_activate):
	Fix GTK+-only build (Closes: #300488), some warning fixes

2005-04-13  Sebastien Bacher  <seb128@debian.org>

	* data/Makefile.am: don't distclean totem.schemas.in.

============ Version 1.1.1

2005-04-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS:
	* configure.in: update for 1.1.1 release

2005-04-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key): add F11 as a shortcut
	to fullscreen (Closes: #173154)

2005-04-08  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* data/uri.glade: Use header capitalization for window titles.
 	* data/totem.glade: Add a missing mnemonic to label. 
 	* src/totem-interface.c:  (totem_interface_error_dialog) Alerts 
 	should not have titles per HIG.
 	* src/totem.c: (update_mrl_label):  Use header capitalization.
 	* src/totem.c: (on_open1_activate): Use header capitalization. 
 	* src/totem-preferences.c: (totem_setup_preferences): Use header
 	capitalization. (Closes: #173129)

2005-04-10  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_directory),
	(totem_pl_parser_parse):
	* src/totem-uri.c: (totem_uri_escape_for_display):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_play), (totem_action_seek),
	(totem_action_set_mrl_with_warning), (totem_action_seek_relative),
	(commit_hide_skip_to):
	Add a totem_uri_escape_for_display function that tries harder
	than gnome-vfs's unescape for display to create valid UTF-8,
	don't use g_build_filename to construct a URI,