@@ -169,36 +169,94 @@ PKG_CHECK_MODULES(GTK, gtk+-x11-2.0 $MM gthread-2.0)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
+dnl *******
+dnl Mozilla
+dnl *******
+
 dnl Check for Mozilla plugin build
-HAVE_MOZILLA=no
-AC_ARG_ENABLE(mozilla,
-	AC_HELP_STRING([--enable-mozilla],[compile the mozilla plugin]),
-	[case "${enableval}" in
-	yes) ENABLE_MOZILLA=yes ;;
-	no) ENABLE_MOZILLA=no ;;
-	*) AC_MSG_ERROR(bad value ${enableval} for --enable-mozilla) ;;
-	esac],
-	[ENABLE_MOZILLA=yes]) dnl Default value
 
-if test x$ENABLE_MOZILLA = "xyes" ; then
-	PKG_CHECK_MODULES(MOZILLA, gtk+-x11-2.0 $MM gthread-2.0 mozilla-plugin gnome-vfs-2.0,
-			[HAVE_MOZILLA=yes], [HAVE_MOZILLA=no])
+AC_MSG_CHECKING([whether to compile the mozilla plugin])
+
+ENABLE_MOZILLA=yes
+AC_ARG_ENABLE([mozilla],
+	AS_HELP_STRING([--enable-mozilla],[compile the mozilla plugin]),
+	[ENABLE_MOZILLA=$enableval],
+	[ENABLE_MOZILLA=yes])
+
+AC_MSG_RESULT([$ENABLE_MOZILLA])
+
+dnl Check which mozilla to use
+if test "x$ENABLE_MOZILLA" = "xyes" ; then
+	AC_MSG_CHECKING([which mozilla to use])
+
+	MOZILLA=
+	AC_ARG_WITH([mozilla],
+		AS_HELP_STRING([--with-mozilla@<:@=mozilla|firefox@:>@],
+				[Whether to use mozilla, or firefox gtkmozembed (default: autodetect)]),
+		[MOZILLA="$withval"])
+
+	dnl try to autodetect: if firefox exists, use it, else try mozilla
+	if test "x$MOZILLA" = "x"; then
+		if $PKG_CONFIG --exists firefox-gtkmozembed; then
+			MOZILLA=firefox
+		elif $PKG_CONFIG --exists mozilla-gtkmozembed; then
+			MOZILLA=mozilla
+		else
+			ENABLE_MOZILLA=no
+		fi
+	elif test "x$with_mozilla" != "xmozilla" -a "x$with_mozilla" != "xfirefox"; then
+		AC_MSG_ERROR([unknown mozilla ($MOZILLA)])
+	fi
+
+	case "x$MOZILLA" in
+		xmozilla) MOZILLA_VERSION_MIN=1.7 ;;
+		xfirefox) MOZILLA_VERSION_MIN=1.0 ;;
+	esac
+
+	AC_SUBST([MOZILLA])
+	AC_MSG_RESULT([$MOZILLA])
 fi
 
-if test x$ENABLE_MOZILLA = "xyes" ; then
-	MOZILLA_LIBDIR=`${PKG_CONFIG} mozilla-plugin --variable=libdir`
-	MOZILLA_XPIDL=${MOZILLA_LIBDIR}/xpidl
-	MOZILLA_XPCFLAGS=`echo ${MOZILLA_LIBDIR} | sed -e s/lib/share\\\/idl/`
-	AC_SUBST(MOZILLA_XPIDL)
-	AC_SUBST(MOZILLA_XPCFLAGS)
+
+dnl Check for mozilla CFLAGS/LDFLAGS
+if test "x$ENABLE_MOZILLA" = "xyes" ; then
+	PKG_CHECK_MODULES([MOZILLA],
+		[gtk+-x11-2.0 \
+		 $MM \
+		 gthread-2.0 \
+		 $MOZILLA-xpcom >= $MOZILLA_VERSION_MIN \
+		 $MOZILLA-plugin \
+		 gnome-vfs-2.0],,
+		[ENABLE_MOZILLA=no])
+
+	AC_SUBST([MOZILLA_CFLAGS])
+	AC_SUBST([MOZILLA_LIBS])
 fi
 
-AC_SUBST(MOZILLA_CFLAGS)
-AC_SUBST(MOZILLA_LIBS)
-if test x$HAVE_MOZILLA = "xyes"; then
-	AC_DEFINE(HAVE_MOZILLA, 1, [defined if you build the mozilla plugin])
+dnl Check for xpidl
+if test "x$ENABLE_MOZILLA" = "xyes" ; then
+	MOZILLA_LIBDIR="`$PKG_CONFIG $MOZILLA-xpcom --variable=libdir`"
+	MOZILLA_IDLDIR="`$PKG_CONFIG $MOZILLA-xpcom --variable=idldir`"
+
+	AC_PATH_PROG([MOZILLA_XPIDL], [xpidl], [no], [$MOZILLA_LIBDIR])
+	if test "x$MOZILLA_XPIDL" = "xno"; then
+		ENABLE_MOZILLA=no
+		AC_MSG_WARN([xpidl compiler not found])
+	fi
+
+	AC_SUBST([MOZILLA_LIBDIR])
+	AC_SUBST([MOZILLA_IDLDIR])
 fi
-AM_CONDITIONAL(HAVE_MOZILLA, test x$HAVE_MOZILLA = "xyes")
+
+if test "x$ENABLE_MOZILLA" = "xyes" ; then
+	AC_DEFINE([HAVE_MOZILLA],[1],[Define if you build the mozilla plugin])
+fi
+
+AM_CONDITIONAL([HAVE_MOZILLA], [test "x$ENABLE_MOZILLA" = "xyes"])
+
+dnl ********
+dnl Nautilus
+dnl ********
 
 dnl Check for Nautilus property page build
 AC_ARG_ENABLE(nautilus,
